<?xml version="1.0" encoding="UTF-8" standalone="no"?><!--
  ~ Copyright (C) 2018 Timothy "ZeevoX" Langer
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file
  ~ except in compliance with the License. You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software distributed under the
  ~ License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  ~ KIND, either express or implied. See the License for the specific language governing
  ~ permissions and limitations under the License.
  -->
<resources>
    <string name="action_add">ADD</string>
    <string name="action_cancel">@android:string/cancel</string>
    <string name="action_ok">@android:string/ok</string>

    <string name="app_name" translatable="false">Secure</string>
    <string name="app_name_permanent" translatable="false">Secure</string>

    <string name="dialog_master_pass_desc">To add, edit or delete an entry in your password database, you must enter the master password.</string>
    <string name="dialog_master_pass_title">Enter master password</string>
    <string name="dialog_new_master_pass_desc">To use the Secure app, you need to create a master password that will encrypt all other passwords.</string>
    <string name="dialog_new_master_pass_input_hint">Enter password</string>
    <string name="dialog_new_master_pass_repeat_hint">Repeat password</string>
    <string name="dialog_new_master_pass_title">Create new master password</string>

    <string name="error_occurred_miscellaneous">An error occurred. Please try again.</string>
    <string name="error_wrong_master_pass">Wrong master password entered!</string>
    <string name="error_wrong_master_pass_thrice">Wrong master password entered three times consecutively! Closing application!</string>

    <string name="image_desc_application_icon">Application icon</string>

    <string name="input_hint_key_name">Key name</string>
    <string name="input_hint_master_pass">Master password</string>
    <string name="input_hint_notes">Notes</string>
    <string name="input_hint_password">Password</string>
    <string name="input_hint_username">Username</string>

    <string name="notification_channel_autobackup_description">Be notified when your passwords have been either uploaded or restored from the cloud.</string>
    <string name="notification_channel_autobackup_title">Auto-backup</string>

    <string name="permission_storage_denied">This app requires the storage permission to access your password database. Please try again and grant access to your internal storage.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Secure\'.</string>
    <string name="permission_storage_rationale">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="permission_storage_required_toast">The storage permission is required for this app.</string>

    <string name="pref_master_pass_each_time_desc">Request the master password every time.</string>
    <string name="pref_master_pass_each_time_title">Always ask for master password</string>
    <string name="pref_set_encryption_algorithm_title">Set encryption algorithm</string>
    <string-array name="pref_set_encryption_algorithm_titles">
        <item>MD5 - PKCS #5</item>
        <item>AES 256-bit</item>
    </string-array>
    <string-array name="pref_set_encryption_algorithm_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="pref_backup_titles">
        <item>Disabled</item>
        <item>Manual</item>
        <item>Auto (recommended)</item>
        <item>Daily</item>
        <item>Weekly</item>
    </string-array>
    <string-array name="pref_backup_values">
        <item>off</item>
        <item>manual</item>
        <item>auto</item>
        <item>daily</item>
        <item>weekly</item>
    </string-array>

    <string name="sample_rv_text" translatable="false">Element</string>

    <string name="title_activity_new_entry">Add a new entry</string>
    <string name="title_activity_settings">Settings</string>
    <string name="nav_header_app_version">Version %s</string>

    <string name="use_password">Use password</string>
    <string name="sign_in">Sign in</string>
    <string name="ok">OK</string>
    <string name="password">Password</string>
    <string name="fingerprint_description">Confirm fingerprint to continue</string>
    <string name="fingerprint_hint">Touch sensor</string>
    <string name="password_description">Enter your store password to continue</string>
    <string name="purchase">Purchase</string>
    <string name="purchase_not_invalidated">Purchase not invalidated</string>
    <string name="purchase_button_not_invalidated_description">
        You can proceed to purchase with this button \n even if a new fingerprint is enrolled
    </string>
    <string name="fingerprint_not_recognized">Fingerprint not recognized. Try again</string>
    <string name="fingerprint_success">Fingerprint recognized</string>
    <string name="item_title">White Mesh Pluto Backpack</string>
    <string name="item_price">$62.68</string>
    <string name="item_description">Mesh backpack in white. Black textile trim throughout.</string>
    <string name="purchase_done">Purchase successful</string>
    <string name="new_fingerprint_enrolled_description">A new fingerprint was added to this device, so your password is required.</string>
    <string name="use_fingerprint_in_future">Use fingerprint in the future</string>
    <string name="use_fingerprint_to_authenticate_title">Use fingerprint to authenticate</string>
    <string name="use_fingerprint_to_authenticate_key">use_fingerprint_to_authenticate_key</string>
    <string name="description_bugdroid_icon">Android bugdroid image</string>
    <string name="description_fingerprint_icon">Fingerprint icon</string>
    <string name="nav_dest_home">Home</string>
    <string name="nav_dest_passgen">Generate password</string>
    <string name="nav_dest_settings">Settings</string>
    <string name="nav_dest_help"><![CDATA[Help & FAQ]]></string>
    <string name="nav_dest_send_feedback">Send feedback</string>
    <string name="nav_dest_tos">Terms of Service</string>

    <string name="action_send_feedback">Send feedback</string>
    <string name="feedback_name_hint">Your name…</string>
    <string name="feedback_email_hint">Your email address…</string>
    <string name="feedback_hint_issue_title">Issue title</string>
    <string name="feedback_hint_reproduction_steps">Reproduction steps</string>
    <string name="feedback_hint_expected_result">Expected result</string>
    <string name="feedback_hint_actual_result">Actual result</string>
    <string name="feedback_error_empty">Please make sure you have not forgotten this field.</string>
    <!-- DO NOT TRANSLATE THE PLACEHOLDERS! -->
    <string name="feedback_prefill_content">
        #### Reproduction steps\n\n
        REPRODUCTION_STEPS\n\n
        #### Expected Result\n\n
        EXPECTED_RESULT\n\n
        #### Actual Result\n\n
        ACTUAL_RESULT\n\n
        #### Device info\n\n
         - Recorder build version: `secure_version_name`\n
         - Device fingerprint: `device_fingerprint`\n\n\n\n
    </string>
    <string name="feedback_check_no_duplicate_title">I have verified there are no duplicate active or recent bugs, questions, or requests</string>
    <string name="feedback_check_latest_version">I have verified that I am using the latest version of Secure</string>
    <string name="feedback_check_generic_title">I have given my issue a non-generic title</string>
    <string name="feedback_check_device_info">I agree that by pressing the "Send feedback" button, Secure will collect some non-identifiable device information such as device name and Android version</string>

    <string-array name="security_level_entries">
        <item>none</item>
        <item>appfingerprint</item>
        <item>fingerprint</item>
        <item>password</item>
    </string-array>

    <string-array name="security_level_titles">
        <item>None</item>
        <item>Unlock application with fingerprint</item>
        <item>Ask for fingerprint every time (recommended)</item>
        <item>Ask for master password every time</item>
    </string-array>

    <string name="google_backup_friendly_name">Secure - Password Database</string>

</resources>
