<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2018 Timothy "ZeevoX" Langer
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file
  ~ except in compliance with the License. You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software distributed under the
  ~ License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  ~ KIND, either express or implied. See the License for the specific language governing
  ~ permissions and limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/nav_group_destinations"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_dest_home" />
        <item
            android:id="@+id/nav_passgen"
            android:icon="@drawable/ic_key"
            android:title="@string/nav_dest_passgen" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_dest_settings" />
    </group>
    <group
        android:id="@+id/nav_group_customer"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_help"
            android:title="@string/nav_dest_help" />
        <item
            android:id="@+id/nav_send_feedback"
            android:title="@string/nav_dest_send_feedback" />
        <item
            android:id="@+id/nav_tos"
            android:title="@string/nav_dest_tos"/>
    </group>
</menu>