<!--
  ~ Copyright (C) 2018 Timothy "ZeevoX" Langer
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file
  ~ except in compliance with the License. You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software distributed under the
  ~ License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  ~ KIND, either express or implied. See the License for the specific language governing
  ~ permissions and limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="General">

        <SwitchPreference
            android:defaultValue="false"
            android:key="application_unlock"
            android:summary="Unlock the application with your password or fingerprint."
            android:title="Enable application unlock" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="master_pass_each_time"
            android:summary="@string/pref_master_pass_each_time_desc"
            android:title="@string/pref_master_pass_each_time_title" />

    </PreferenceCategory>

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <!--<EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />-->

    <PreferenceCategory
        android:enabled="false"
        android:title="Encryption">

        <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to dismiss it. -->
        <ListPreference
            android:defaultValue="0"
            android:enabled="false"
            android:entries="@array/pref_set_encryption_algorithm_titles"
            android:entryValues="@array/pref_set_encryption_algorithm_values"
            android:key="encryption_algorithm"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:summary="%s"
            android:title="@string/pref_set_encryption_algorithm_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Danger zone">
        <Preference
            android:key="delete_database"
            android:summary="Delete ALL saved passwords in the database."
            android:title="Clear database" />
    </PreferenceCategory>
</PreferenceScreen>
