<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2018 Timothy "ZeevoX" Langer
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file
  ~ except in compliance with the License. You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software distributed under the
  ~ License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  ~ KIND, either express or implied. See the License for the specific language governing
  ~ permissions and limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_dialog_new_master_key"
    style="@style/Widget.Secure.Dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginBottom="@dimen/spacing_normal"
        android:text="@string/dialog_new_master_pass_title"
        android:textAppearance="@style/TextAppearance.Secure.DialogTitle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/spacing_normal"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_normal"
        android:text="@string/dialog_new_master_pass_desc"
        android:textAppearance="@style/TextAppearance.Secure.DialogContent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_new_master_password_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/spacing_normal"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginBottom="@dimen/spacing_normal"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_new_master_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:fontFamily="monospace"
            android:hint="@string/dialog_new_master_pass_input_hint"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_repeat_master_password_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/spacing_normal"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_normal"
        app:hintAnimationEnabled="true"
        app:passwordToggleEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_repeat_master_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:fontFamily="monospace"
            android:hint="@string/dialog_new_master_pass_repeat_hint"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_new_master_key_button_neutral"
            style="@style/Widget.Secure.BorderlessButton"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="@dimen/margin_normal"
            android:text="Import passwords"/>

        <Button
            android:id="@+id/dialog_new_master_key_button_ok"
            style="@style/Widget.Secure.RaisedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_normal"
            android:text="@android:string/ok" />

    </LinearLayout>
</LinearLayout>